[FIX] web: align close icon on badges
This commit fixes the vertical alignment of the `oi-close` icon on
`badge.tag.xml` and `tags_list`.

task-5072923

--- a/addons/web/static/src/views/fields/many2many_tags/many2many_tags_field.scss
+++ b/addons/web/static/src/views/fields/many2many_tags/many2many_tags_field.scss
@@ -40,6 +40,10 @@
             @include o-text-overflow(inline-block);
             max-width: var(--Tag-max-width, 200px);
         }
+
+        .o_delete {
+            line-height: normal;
+        }
     }
 }
 
